tests/ui/impl-trait/nested-return-type3-tait2.stderr
error: opaque type `Traitable` does not satisfy its associated type bounds
  --> $DIR/nested-return-type3-tait2.rs:16:29
   |
LL |     type Assoc: Duh;
   |                 --- this associated type bound is unsatisfied for `Sendable`
...
LL | type Traitable = impl Trait<Assoc = Sendable>;
   |                             ^^^^^^^^^^^^^^^^

error: aborting due to previous error

